<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_horizontal_spacing"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvAlertTitle"
        android:gravity="center_vertical"
        android:minHeight="@dimen/material_component_text_full_width_single_line_text_field_height"
        android:textSize="@dimen/dimen_typeface3"
        android:textColor="@color/colorBrown"
        android:text="@string/permission_denied_title"
        fontPath="fonts/Roboto-Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_between_itens"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvContentAlert"
        fontPath="fonts/Roboto-Light.ttf"
        android:textSize="@dimen/dimen_typeface3"
        android:text="@string/permission_denied_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="right"
        android:textColor="@color/colorGray"
        android:orientation="horizontal"
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_component_text_full_width_single_line_text_field_height">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvNo"
            android:textColor="@color/colorGray"
            android:textAllCaps="true"
            android:gravity="center"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/material_card_padding"
            android:textSize="@dimen/dimen_typeface3"
            android:minWidth="88dp"
            android:text="@string/app_str_no"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvYes"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:gravity="center"
            android:clickable="true"
            android:layout_marginRight="@dimen/dimen_horizontal_spacing"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="88dp"
            android:layout_gravity="center"
            android:text="@string/app_str_yes"
            android:textSize="@dimen/dimen_typeface3"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>