<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/view_space_horizontal"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvAlertTitle"
        android:gravity="center_vertical"
        android:minHeight="@dimen/text_view_height"
        android:textSize="@dimen/dimen_typeface5"
        android:textColor="@color/colorParagraph"
        android:text="@string/donate_fragment_by_mail"
        fontPath="fonts/Roboto-Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_views"
        android:layout_centerHorizontal="true" />

    <!-- Input Text -->
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/view_space_vertical"
        android:id="@+id/tiInformation"
        app:theme="@style/FriendlyDonationsTheme.FloatingEditText"
        app:hintTextAppearance="@style/FriendlyDonationsTheme.FloatingEditText.Hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etInformation"
            android:layout_width="match_parent"
            fontPath="fonts/Roboto-Medium.ttf"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/acc_settings_email"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:gravity="right"
        android:textColor="@color/colorSubtitle"
        android:orientation="horizontal"
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_height">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvNo"
            android:textColor="@color/colorSubtitle"
            android:textAllCaps="true"
            android:gravity="center"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/card_padding"
            android:textSize="@dimen/dimen_typeface2"
            android:minWidth="88dp"
            android:text="@string/donate_fragment_cancel"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvYes"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:gravity="center"
            android:clickable="true"
            android:layout_marginRight="@dimen/view_space_horizontal"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="88dp"
            android:layout_gravity="center"
            android:text="@string/donate_fragment_add"
            android:textSize="@dimen/dimen_typeface2"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>