<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="@dimen/dimen_vertical_spacing"
            android:layout_marginLeft="@dimen/dimen_horizontal_spacing"
            android:layout_marginRight="@dimen/dimen_horizontal_spacing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Security -->
            <android.support.v7.widget.AppCompatTextView
                style="@style/TextView.Typeface3"
                fontPath="fonts/Montserrat-Bold.ttf"
                android:textColor="@color/colorBrown"
                android:text="@string/terms_priv_security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvSecurity"
                style="@style/TextView.Typeface2"
                fontPath="fonts/Montserrat-Regular.ttf"
                android:layout_marginTop="@dimen/dimen_between_itens"
                android:textColor="@color/colorGray"
                android:text="@string/lorem_phrase_too_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Security -->
            <android.support.v7.widget.AppCompatTextView
                style="@style/TextView.Typeface3"
                android:layout_marginTop="@dimen/dimen_vertical_spacing"
                fontPath="fonts/Montserrat-Bold.ttf"
                android:textColor="@color/colorBrown"
                android:text="@string/terms_priv_privacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvPrivacity"
                style="@style/TextView.Typeface2"
                fontPath="fonts/Montserrat-Regular.ttf"
                android:layout_marginTop="@dimen/dimen_between_itens"
                android:textColor="@color/colorGray"
                android:paddingBottom="@dimen/dimen_space_double"
                android:text="@string/lorem_phrase_too_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>