<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/bg_login"
        android:layout_width="match_parent"
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:fitsSystemWindows="true"
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_logo_login"
            android:layout_marginTop="56dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgLogoLogin"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:background="#1A1A1A64"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/login_about_terms"
            android:id="@+id/tvAboutTerms"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:clickable="true"
            android:id="@+id/viewFacebookLogin"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/colorFacebook"
            android:layout_height="80dp"
            android:layout_above="@+id/tvAboutTerms"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:minHeight="32dp"
                android:contentDescription="@string/content_description"
                android:layout_gravity="center"
                android:src="@drawable/ic_facebook_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <TextView
                android:id="@+id/tvFacebookLogin"
                android:minHeight="32dp"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="@color/colorWhite"
                android:text="@string/login_with_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </RelativeLayout>


</FrameLayout>