<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPicture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/avByEmail"
            android:orientation="vertical"
            android:layout_margin="@dimen/dimen_horizontal_spacing"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/ivCamera"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/drawable_bg_circle_primary"
                android:src="@drawable/ic_camera_alt_black_48dp"
                android:padding="12dp"
                android:layout_width="56dp"
                android:layout_height="56dp"  />

            <TextView
                android:id="@+id/tvCamera"
                tools:ignore="MissingPrefix"
                fontPath="fonts/Roboto-Medium.ttf"
                style="@style/TextView.Typeface3"
                android:layout_marginTop="@dimen/material_component_grid_lists_padding_big"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:text="@string/donate_include_image_from_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/avByPhone"
            android:orientation="vertical"
            android:layout_margin="@dimen/dimen_horizontal_spacing"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/ivGallery"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/drawable_bg_circle_primary"
                android:src="@drawable/ic_photo_black_48dp"
                android:padding="12dp"
                android:layout_width="56dp"
                android:layout_height="56dp" />

            <TextView
                android:id="@+id/tvGallery"
                tools:ignore="MissingPrefix"
                fontPath="fonts/Roboto-Medium.ttf"
                style="@style/TextView.Typeface3"
                android:layout_marginTop="@dimen/material_component_grid_lists_padding_big"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:text="@string/donate_include_image_from_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tvPicture"
        tools:ignore="MissingPrefix"
        fontPath="fonts/Montserrat-Regular.ttf"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:maxLines="1"
        android:textColor="@color/colorBrown"
        android:text="@string/donate_include_image_choose_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTopContent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:id="@+id/rlTopContent"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/alertTitle"
            tools:ignore="MissingPrefix"
            fontPath="fonts/Montserrat-Regular.ttf"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            style="@style/TextView.Typeface3"
            android:text="@string/donate_include_image_textual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</RelativeLayout>